# nextballup

./: .dockerignore  .env.alpha-preview.local.example  .env.alpha.local.example  .env.example  .gitignore  API_SPEC.md  AUDIT_DECISIONS.md  CLAUDE.md  DATABASE_SCHEMA.md  Dockerfile.backend  FRONTEND_ARCH.md  PRD.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml  security.yml
alembic/: env.py
alembic/versions/: 20260414_0001_initial.py  20260415_0002_team_invites.py  20260415_0003_harden_team_rls.py  20260415_0004_videos_and_games.py  20260415_0005_phase3_hardening.py  20260415_0006_video_team_integrity.py  20260415_0007_video_outputs.py  20260416_0008_app_runtime_role.py  20260425_0009_refresh_sessions.py  20260425_0010_privacy_retention_hardening.py  20260425_0011_cv_pipeline_shell.py  20260425_0012_email_verification.py  20260425_0013_billing_layer.py  20260425_0014_cv_artifact_min_plan.py  20260425_0015_mfa_scaffold.py  20260425_0016_identity_billing_rls_hardening.py  20260425_0017_commercial_readiness_hardening.py  20260426_0018_csp_reports.py  20260426_0019_query_path_indexes.py  20260426_0020_subscription_plan_snapshots.py  20260426_0021_soft_delete_visibility.py  20260426_0022_email_verification_cleanup_policy.py  20260426_0023_append_only_and_soft_delete_write_hardening.py  20260426_0024_commercial_readiness_followups.py  20260426_0025_password_reset_tokens.py  20260426_0026_visibility_trigger_security.py  20260506_0027_widen_video_upload_id.py  20260507_0028_video_demo_preview_state.py  20260515_0029_video_event_review_windows.py
apps/api/: pyproject.toml
apps/api/src/nextballup_api/: __init__.py  audit.py  billing.py  demo_preview.py  deps.py  email_delivery.py  email_verification.py  errors.py  main.py  password_reset.py  permissions.py  request_meta.py  seed.py  storage.py  tenant.py  video_playback_status.py
apps/api/src/nextballup_api/middleware/: csrf.py  request_id.py  security_headers.py
apps/api/src/nextballup_api/routers/: admin.py  auth.py  csp.py  games.py  health.py  marketing.py  mfa.py  teams.py  videos.py
apps/api/src/nextballup_api/security/: cookies.py  csrf.py  invite_code.py  jwt.py  mfa.py  passwords.py  rate_limit.py
apps/web/: .env.alpha.local.example  .env.example  .gitignore  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.typecheck.json  vitest.config.ts
apps/web/src/: middleware.ts
apps/web/src/app/: global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  providers.tsx
apps/web/src/app/(app)/: app-shell.tsx  error.tsx  layout.tsx  loading.tsx
apps/web/src/app/(auth)/: layout.tsx  types.ts
apps/web/src/app/faq/: page.tsx
apps/web/src/app/pilot/: page.tsx  pilot-interest-form.tsx
apps/web/src/app/product/: page.tsx
apps/web/src/app/security/: page.tsx
apps/web/src/app/use-cases/: page.tsx
apps/web/src/components/: brand-link.tsx  cancel-upload-button.tsx  email-verification-banner.tsx  team-picker.tsx  theme-script.tsx  theme-toggle.tsx
apps/web/src/lib/: active-team.ts  api-client.ts  api-server.ts  contract.ts  email-verification-state.ts  errors.ts  retry-after.ts  video-status.ts
apps/web/tests/: active-team.test.ts  api-client.test.ts  api-server.test.ts  app-shell.test.tsx  auth-rate-limit.test.tsx  create-game-form.test.tsx  create-team-form.test.tsx  email-verification.test.tsx  game-edit-form.test.tsx  invite-panel.test.tsx  join-team-form.test.tsx  marketing-home.test.tsx  marketing-routes.test.tsx  middleware-csp.test.ts  new-game-page.test.tsx  password-reset.test.tsx  pilot-interest.test.tsx  playback-view.test.tsx  privacy-consent-panel.test.tsx  registration-gate.test.tsx  security-headers.test.ts  setup.ts  team-detail-page.test.tsx  team-picker.test.tsx  theme-toggle.test.tsx  upload-flow.test.tsx
apps/worker/: pyproject.toml
apps/worker/src/nextballup_worker/: __init__.py  audit.py  celery_app.py  errors.py  observability.py  routing.py  session.py  tasks.py  tenant.py
apps/worker/src/nextballup_worker/runtime/: __init__.py  cleanup.py  cv_pipeline.py  demo_preview.py  dispatch.py  jobs.py  media.py  transcode.py
docs/: SECURITY_AUDIT.md
docs/privacy/: DATASET_PROVENANCE.md  DATA_RETENTION_MATRIX.md  DSAR_PLAYBOOK.md  MINOR_CONSENT_HANDLING.md  README.md  retention_policy.yaml
docs/research/: 01_blueprint.md  02_opensource_deep_research.md  03_validation_report.md
docs/soc2/: ACCESS_REVIEW.md  ALPHA_RENDER_DEPLOYMENT.md  BACKUP_RESTORE.md  CHANGE_MANAGEMENT.md  DATA_RETENTION.md  DEPLOYMENT_CHANNELS.md  EVIDENCE_COLLECTION.md  INCIDENT_RESPONSE.md  LOCAL_ALPHA_DEBUGGING.md  MFA_LOGIN_CHALLENGE.md  MONITORING_ALERTING.md  POSTMORTEM_TEMPLATE.md  PRODUCTION_READINESS.md  README.md  SSO_FUTURE.md  VENDOR_REGISTER.md
infra/compose/: worker-transcode.hardened.yml
infra/containers/: ffmpeg-sandbox.Dockerfile
infra/scripts/: init-db.sql
scripts/: configure_runtime_db_role.py  local_alpha_api.sh  local_alpha_beat.sh  local_alpha_demo_preview_preflight.sh  local_alpha_demo_preview_worker.sh  local_alpha_demo_preview_worker_ctl.sh  local_alpha_migrate.sh  local_alpha_seed.sh  local_alpha_web.sh  local_alpha_worker.sh  render_predeploy.sh  render_runtime.sh  render_start_api.sh  render_start_beat.sh  render_start_worker.sh
tests/: conftest.py  csrf_helper.py  test_abuse.py  test_admin_audit.py  test_auth.py  test_billing.py  test_celery_app.py  test_clip_proposals.py  test_compliance.py  test_container_hardening.py  test_csp_reports.py  test_cv_artifact_entitlement.py  test_db_roles.py  test_e2e_smoke.py  test_email_verification.py  test_health.py  test_logging_redaction.py  test_mfa.py  test_observability.py  test_password_reset.py  test_permissions.py  test_phase5.py  test_pilot_interest.py  test_rate_limit.py  test_registration_gate.py  test_request_meta.py  test_retention_policy.py  test_route_guards.py  test_seed.py  test_startup_hardening.py  test_storage_sanitizer.py  test_teams.py  test_transcode_media.py  test_videos.py  test_worker.py  test_worker_routing.py
(+28 files in other folders)
