[project]
name = "nextballup"
version = "0.1.0"
description = "AI vision platform for basketball player analysis — hidden impact metrics beyond box scores"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

# Root-level dev dependencies (shared across workspace)
dependencies = []

[tool.uv]
dev-dependencies = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "httpx>=0.27",  # async test client for FastAPI
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/db",
    "packages/cv_pipeline",
    "packages/clip_engine",
    "apps/api",
    "apps/worker",
]

[tool.uv.sources]
nextballup-core = { workspace = true }
nextballup-db = { workspace = true }
nextballup-cv = { workspace = true }
nextballup-clips = { workspace = true }

# ---- Ruff configuration ----
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "A",    # builtins shadowing
    "SIM",  # simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line length (handled by formatter)
    "B008",    # do not perform function calls in argument defaults (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["nextballup_core", "nextballup_db", "nextballup_cv", "nextballup_clips"]

# ---- Mypy configuration ----
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["cv2.*", "torch.*", "torchvision.*", "mmpose.*", "filterpy.*"]
ignore_missing_imports = true

# ---- Pytest configuration ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: requires GPU for execution",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
