[project]
name = "nextballup"
version = "0.1.0"
description = "Production-minded basketball film archive and review platform foundation"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }

# Root depends on every non-CV workspace member so `uv sync` installs the
# backend (API + worker) in one shot. "Lightweight" here means CV-heavy
# `packages/cv_pipeline` stays out of the workspace entirely; celery/redis
# used by the worker service are orders of magnitude smaller than torch/
# OpenMMLab and are part of the default backend footprint.
dependencies = [
    "nextballup-core",
    "nextballup-db",
    "nextballup-api",
    "nextballup-worker",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "fakeredis[lua]>=2.20,<3",
    "httpx>=0.27",  # async test client for FastAPI
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pip-audit>=2.8",
    "pip-licenses>=5.0",
    "pyyaml>=6.0,<7",
    "types-PyYAML>=6.0,<7",
]

[tool.uv]
default-groups = ["dev"]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/db",
    "packages/clip_engine",
    "apps/api",
    "apps/worker",
]

[tool.uv.sources]
nextballup-core = { workspace = true }
nextballup-db = { workspace = true }
nextballup-clips = { workspace = true }
nextballup-api = { workspace = true }
nextballup-worker = { workspace = true }

# ---- Ruff configuration ----
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # bugbear
    "A",    # builtins shadowing
    "SIM",  # simplify
    "TCH",  # type-checking imports
    "RUF",  # ruff-specific
]
ignore = [
    "E501",    # line length (handled by formatter)
    "B008",    # do not perform function calls in argument defaults (FastAPI Depends)
    # TC* (formerly TCH) demands moving annotation-only imports under TYPE_CHECKING.
    # FastAPI / Pydantic / SQLAlchemy resolve type hints at runtime via
    # get_type_hints(), which requires the symbols to be importable at module
    # level — the rule actively breaks our dependency injection in practice.
    "TC001",
    "TC002",
    "TC003",
    # RUF059 nags when a tuple-returning helper's extra elements aren't used
    # by a specific caller. Test files use the same helper for many cases and
    # often need only a subset of the tuple; prefixing every unused element is
    # churn without benefit.
    "RUF059",
]

[tool.ruff.lint.isort]
known-first-party = ["nextballup_core", "nextballup_db", "nextballup_cv", "nextballup_clips"]

# ---- Mypy configuration ----
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = ["boto3", "botocore.*", "celery", "celery.*", "jose"]
ignore_missing_imports = true

# Celery has no py.typed marker, so its Task base and @app.task decorators
# project as Any. Allow subclassing/decoration without mypy complaints inside
# the worker task shim — everything we care about is typed in the runtime
# modules it delegates to.
[[tool.mypy.overrides]]
module = ["nextballup_worker.tasks"]
disallow_untyped_decorators = false
disable_error_code = ["misc"]


# ---- Pytest configuration ----
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: requires GPU for execution",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
