[project]
name = "nextballup-api"
version = "0.1.0"
description = "NextBallUp FastAPI application"
requires-python = ">=3.12"
dependencies = [
    "nextballup-core",
    "nextballup-db",
    "nextballup-clips",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.17",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "boto3>=1.35",          # S3/MinIO presigned URLs
    "redis>=5.2",
    "websockets>=14.0",
    "jinja2>=3.1",          # Report templates
    "orjson>=3.10",         # Fast JSON serialization
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api"]
