[project]
name = "nextballup-api"
version = "0.1.0"
description = "NextBallUp FastAPI application"
requires-python = ">=3.12,<3.13"
dependencies = [
    "nextballup-core",
    "nextballup-db",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-jose[cryptography]>=3.3",
    "bcrypt>=4.2",
    "boto3>=1.35",          # S3/MinIO presigned URLs
    "redis>=5.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nextballup_api"]
