[project]
name = "nextballup-worker"
version = "0.1.0"
description = "NextBallUp Celery worker for GPU-intensive CV processing tasks"
requires-python = ">=3.12,<3.13"
dependencies = [
    "nextballup-core",
    "nextballup-db",
    "nextballup-clips",
    "celery[redis]>=5.4,<5.7",
    "boto3>=1.35",
    "filetype>=1.2,<2",
    "redis>=5.0,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nextballup_worker"]
